# GenericNUOPCDriver

./: CMakeLists.txt  LICENSE  README.md  esm.F90  esmApp.F90  nuopc_atm.yaml  nuopc_drv.yaml  nuopc_lnd.yaml
scripts/: gen_code.py  gen_config.py  get_input.py
